[project]
name = "nebula-docs"
version = "0.1.0"
description = "Nebula documentation"
authors = [{ name = "TIER IV"}]
requires-python = ">=3.10"
dependencies = [
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "mkdocs-drawio>=1.8.2",
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.2.1",
    "mkdocs-autorefs>=1.4.1",
    "mkdocs-material>=9.6.9",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings[python]>=0.29.0",
    "mkdocs-macros-plugin>=1.3.7",
    "pymdown-extensions>=10.15",
    "mkdoxy>=1.2.8",
]
